fe-fix: overflow of participant list

--- a/client/src/pages/PresentGifPage/ParticipantList.module.scss
+++ b/client/src/pages/PresentGifPage/ParticipantList.module.scss
@@ -19,6 +19,7 @@
   justify-self: flex-end;
   justify-content: center;
   gap: 5px;
+  padding-top: 15px;
 }
 
 .participants {
